src/test/ui/union/issue-41073.stderr
error[E0740]: unions may not contain fields that need dropping
  --> $DIR/issue-41073.rs:4:5
   |
LL |     a: A,
   |     ^^^^
   |
help: wrap the type with `std::mem::ManuallyDrop` and ensure it is manually dropped
   |
LL |     a: std::mem::ManuallyDrop<A>,
   |        +++++++++++++++++++++++ +

error: aborting due to previous error

For more information about this error, try `rustc --explain E0740`.
